<resources>
    <string name="app_name">AppPeluqueria</string>
    <string name="app_title">Peluquería IES Luis Vives</string>

    <!-- Common -->
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="register_button">REGÍSTRATE</string>
    <string name="toast_mandatory_fields">Todos los campos son obligatorios</string>
    <string name="toast_login_failed">Login fallido</string>

    <!-- Register -->
    <string name="enter_data">Introduce tus datos para registrarte</string>
    <string name="full_name">Nombre y apellidos</string>
    <string name="phone">Teléfono</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="register">Registrarse</string>
    <string name="yes_account">¿Ya tienes cuenta?</string>
    <string name="login_button">INICIA SESIÓN</string>
    <string name="toast_passwords_not_matching">Las contraseñas no coinciden</string>
    <string name="toast_password_too_short">La contraseña debe tener al menos 6 caracteres</string>
    <string name="toast_invalid_phone">El teléfono debe tener 9 caracteres</string>
    <string name="toast_register_failed">Registro fallido</string>
    <string name="toast_invalid_email">El email no es válido</string>
    <string name="toast_register_success">Usuario registrado correctamente</string>

    <!-- Services -->
    <string name="services">Elige uno o más servicios</string>
    <string name="toast_no_services_selected">Por favor, seleccione al menos un servicio</string>
    <string name="service_time">Tiempo del servicio</string>
    <string name="service_name">Nombre del servicio</string>

    <!-- Appointments -->
    <string name="appointments_future">Citas próximas</string>
    <string name="appointment_datetime">Fecha y hora de la cita</string>
    <string name="appointment_services">Lista de servicios</string>
    <string name="appointment_duration">Duración de la cita</string>
    <string name="dialog_cancel_appointment_title">Cancelar cita</string>
    <string name="dialog_cancel_appointment_message">¿Seguro que quieres cancelar esta cita?</string>
    <string name="toast_cancel_appointment_success">Cita cancelada correctamente</string>
    <string name="toast_cancel_appointment_failed">Error al cancelar la cita</string>
    <string name="dialog_confirm_appointment_title">Confirmar cita</string>
    <string name="dialog_confirm_appointment_message">¿Quieres crear esta cita?</string>
    <string name="toast_confirm_appointment_success">Cita creada correctamente</string>
    <string name="toast_confirm_appointment_failed">Error al crear la cita</string>
    <string name="hour_selected">Hora Seleccionada</string>

    <!-- Profile -->
    <string name="profile">Perfil</string>
    <string name="profile_confirm_changes">Confirmar cambios</string>
    <string name="profile_change_password">Cambiar contraseña</string>
    <string name="introduce_password">Introduce la contraseña</string>
    <string name="profile_change_fields">Cambia al menos un campo para actualizar su perfil</string>
    <string name="profile_updated">Perfil actualizado</string>
    <string name="toast_wrong_password">La contraseña es incorrecta</string>

    <!-- Change password -->
    <string name="change_password">Cambio de contraseña</string>
    <string name="actual_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="new_password_again">Repetir la nueva contraseña</string>
    <string name="toast_passwords_dont_match">Los campos de contraseña nueva no coinciden</string>
    <string name="toast_password_changed">Contraseña cambiada</string>

    <!-- Others -->
    <string name="hour">Hora</string>
    <string name="date_hint">Fecha</string>
    <string name="toast_no_hour_selected">No hay ninguna hora seleccionada</string>
    <string name="choose_date">Elige una fecha</string>
    <string name="toast_settings_error">Ha ocurrido un error al recuperar los parámetros de la aplicación</string>
    <string name="toast_password_change_failed">No se ha podido actualizar la contraseña</string>



</resources>